// Specification of the user facing gRPC API.
syntax = "proto3";
package rpc;

import "requests.proto";
import "responses.proto";

service Api {
    rpc CheckNullifiers(requests.CheckNullifiersRequest) returns (responses.CheckNullifiersResponse) {}
    rpc FetchBlockHeaderByNumber(requests.FetchBlockHeaderByNumberRequest) returns (responses.FetchBlockHeaderByNumberResponse) {}
    rpc SyncState(requests.SyncStateRequest) returns (responses.SyncStateResponse) {}
}
